update otp function
